added fit-fe parted
